* XXX XXX XX XXXX XX:XX:XX +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.3-1.1%{?dist}
Release 1.1.3 Start 08/02/2023 End --/--/20--
- 08/02/2023
01. include qmailconfig.h if HAVE_CONFIG_H is not defined
- 13/02/2023
02. ssl/tls.c: removed SSL_CTX_free in tls_session on SSL_new failure
03. base/setuserid.c: rewind passwd file using qsetpwent, setpwent

* Mon Jan 30 2023 12:46:04 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.2-1.1%{?dist}
Release 1.1.2 Start 10/10/2022 End 30/01/2023
======= Release Highlights ================================================
o tls functions for indimail-mta, indimail-virtualdomains
o subprintf function - substdio equivalent of printf
o qsnprintf, qsprintf functions - equivalent of snprintf and sprintf
  functions using stralloc instead of fixed size buffer.
===========================================================================
- 10/10/2022
01. configure.ac: Fixed leapsecs.dat path
- 05/11/2022
02. digest-md5.c: return incorrect password for invalid arguments
03. pw_comp.c: added documentary comments.
- 06/12/2022
04. tcpbind.c: display servicename, hostname in getaddrinfo error
- 13/12/2022
05. wait.h: use system defined wait macros from sys/wait.h
06. error.c, error.h: added error_child for ECHILD
- 17/12/2022
07. wait.h: added wait_handler() and wait_exited macro
08. wait_handler.c: added wait_handler() function wrapper for handling wait
    status
- 02/01/2023
09. tls.c, tls.h: added tls/ssl functions
10. allwrite.c: added allwrite() function
11. commands.c: return -2 for command too long
12. ndelay.c: added ndelay() function to get value of DELAY flag for
    descriptor
- 03/01/2023
13. tls.c: set default ciphers to "PROFILE=SYSTEM" to quell rpmlint warning
14. tls.c: SSL_CTX_set_ecdh_auto supported only on openssl 1.0.2 and above
- 07/01/2023
15. tls.c: replaced SSH_shutdown + SSL_free with ssl_free function
- 12/01/2023
16. timeoutwrite.c: replaced write() with allwrite()
- 13/01/2023