@@ -5,6 +5,9 @@ Release 1.1.3 Start 08/02/2023 End --/--/20--
 - 13/02/2023
 02. ssl/tls.c: removed SSL_CTX_free in tls_session on SSL_new failure
 03. base/setuserid.c: rewind passwd file using qsetpwent, setpwent
+- 15/02/2023
+04. base/tls.c: self generate rsa/dh parameters if rsa/dh files are missing or
+    unreadable
 
 * Mon Jan 30 2023 12:46:04 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2 Start 10/10/2022 End 30/01/2023
